L10n for bug 394759 - Add undo close window feature (strings only).

--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -108,6 +108,15 @@ feedShowFeedNew=Prenumerera på ”%S”…
 # History menu
 menuOpenAllInTabs.label=Öppna alla i flikar
 menuOpenAllInTabs.accesskey=Ö
+# LOCALIZATION NOTE (menuRestoreAllWindows, menuUndoCloseWindowLabel, menuUndoCloseWindowSingleTabLabel):
+# see bug 394759
+menuRestoreAllWindows.label=Återställ alla fönster
+menuRestoreAllWindows.accesskey=Å
+# LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semi-colon list of plural forms.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+# #1 Window Title, #2 Number of tabs
+menuUndoCloseWindowLabel=#1 (och #2 annan flik);#1 (och #2 andra flikar)
+menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
 tabHistory.current=Stanna på denna sida
