--- a/sv-SE/browser/chrome/browser/browser.properties
+++ b/sv-SE/browser/chrome/browser/browser.properties
@@ -90,7 +90,22 @@ blockedpluginsMessage.searchButton.accesskey=U
 
 # Sanitize
 sanitizeWithPromptLabel2=Rensa ut tidigare historik…
-sanitizeButton2=Rensa ut känslig data
+# LOCALIZATION NOTE (sanitizeDialog2.everything.title): When "Time range to
+# clear" is set to "Everything", the Clear Recent History dialog's title is
+# changed to this.  See UI mockup and comment 11 at bug 480169 -->
+sanitizeDialog2.everything.title=Ta bort all historik
+sanitizeButtonOK=Ta bort
+# LOCALIZATION NOTE (sanitizeEverythingWarning): Warning that appears when "Time
+# range to clear" is set to "Everything" in Clear Recent History dialog.  UI
+# mockup at bug 480169.  This value is a semi-colon list of plural forms.  #1 is
+# replaced with the number of history visits. %S is replaced with the date of
+# the oldest visit.
+# See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
+sanitizeEverythingWarning=All historik kommer att tas bort.  Historiken innehåller ett webbplatsbesök sedan %S.;All historik kommer att tas bort.  Historiken innehåller #1 webbplatsbesök sedan %S.
+# LOCALIZATION NOTE (sanitizeEverythingNoVisitsWarning): Used in same context
+# as sanitizeEverythingWarning except this is shown instead when there are no
+# visits in the user's history.
+sanitizeEverythingNoVisitsWarning=All historik kommer att tas bort.
 
 # Check for Updates
 updatesItem_default=Sök efter uppdateringar…
