--- a/nb-NO/toolkit/chrome/places/places.properties
+++ b/nb-NO/toolkit/chrome/places/places.properties
@@ -3,11 +3,18 @@ BookmarksToolbarFolderTitle=Verktøylinje for bokmerker
 UnsortedBookmarksFolderTitle=Usorterte bokmerker
 TagsFolderTitle=Merkelapper
 
+# LOCALIZATION NOTE (dateName):
+# These are used to generate history containers when history is grouped by date
 finduri-AgeInDays-is-0=I dag
 finduri-AgeInDays-is-1=I går
 finduri-AgeInDays-is=%S dager siden
+finduri-AgeInDays-last-is=Siste %S dagene
 finduri-AgeInDays-isgreater=Eldre enn %S dager
+finduri-AgeInMonths-is-0=Denne måneden
+finduri-AgeInMonths-isgreater=Eldre enn %S måneder
 
+# LOCALIZATION NOTE (localFiles):
+# This is used to generate local files container when history is grouped by site
 localhost=(lokale filer)
 
 # LOCALIZATION NOTE (bookmarksArchiveFilename):
