catching up, rewording in preferences

--- a/fi/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/fi/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,5 +1,3 @@
-# Status strings used in the subscribe dialog
-…
 subscribe-validating=Tarkistetaan syötettä…
 subscribe-cancelSubscription=Peruutetaanko syötteen tilaus?
 subscribe-cancelSubscriptionTitle=Tilataan syötettä…
@@ -9,25 +7,29 @@ subscribe-errorOpeningFile=Tiedoston avaus ei onnistunut.
 
 subscribe-OPMLImportTitle=Valitse tuotava OPML-tiedosto
 subscribe-OPMLExportTitle=Vie syötteet OPML-tiedostoon
-subscribe-OPMLExportFileTitle=Thunderbirdin OPML-vienti
-subscribe-OPMLExportFileName=ThunderbirdinSyötteet.opml
-#LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=%Sin OPML-vienti
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=%Sin_syötteet.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile=%S ei ole oikein muotoiltu OPML-tiedosto tai tiedostoa tuotaessa tapahtui virhe.
 
 subscribe-OPMLExportOPMLFilesFilterText=OPML-tiedostot
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=Poista syöte
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=Poistetaanko syöte %S?
 
-# when downloading new feed items from the subscribe dialog.
-# LOCALIZATION NOTE: Do not translate %d in the following line.
-# The first %S will receive the number of messages received so far;
-# the second %S will receive the total number of messages
-subscribe-fetchingFeedItems=Noudetaan syötteen artikkeleita (%S / %S)
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=Noudetaan syötteen artikkeleita (%S / %S)…
 
 newsblog-noNewArticlesForFeed=Syötteessä ei ole uusia artikkeleita
-newsblog-networkError=%S ei löytynyt. Tarkista osoite ja yritä uudestaan.
-newsblog-invalidFeed=%S ei ole kelvollinen RSS-syöte.
-newsblog-getNewMailCheck=Haetaan uusia artikkeleita sisältäviä syötteitä
-
+newsblog-networkErrorTitle=Verkkovirhe
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
+newsblog-networkError=Osoitetta %S ei voitu avata. Tarkista osoite ja yritä uudelleen.
+newsblog-feedNotValidTitle=Virheellinen syöte
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S ei ole kelvollinen syöte
+newsblog-getNewMsgsCheck=Haetaan uusia artikkeleita sisältäviä syötteitä…
