--- a/fi/mail/chrome/messenger/search-attributes.properties
+++ b/fi/mail/chrome/messenger/search-attributes.properties
@@ -8,12 +8,15 @@
 6=Vastaanottaja
 7=Kopio
 8=Vastaanottaja tai kopio
-# 9-15, not visible
+# 9 not visible
 9=Sijainti
+# 10 not visible
 10=Viestin avain
 11=Ikä päivissä
+# 12 not visible
 12=Kansion tiedot:
 13=Koko
+# 14 not visible
 14=Mikä tahansa teksti
 15=Tunnukset
 # for AB and LDAP
@@ -44,9 +47,9 @@
 40=reserved for AB
 41=reserved for AB
 42=reserved for AB
-43=reserved for AB
-44=reserved for AB
-45=reserved for AB
+43=Lähettäjä, vastaanottaja tai kopio-osoite
+44=Roskapostiluku alkuperäinen
+45=Roskapostiprosentti
 46=Liitteen tila
 47=Roskapostitila
 48=Tunnus
