--- a/fi/mail/chrome/messenger/search-operators.properties
+++ b/fi/mail/chrome/messenger/search-operators.properties
@@ -1,17 +1,17 @@
-0=sis\u00E4lt\u00E4\u00E4
-1=ei sis\u00E4ll\u00E4
+0=sisältää
+1=ei sisällä
 2=on
 3=ei ole
-4=on tyhj\u00E4
+4=on tyhjä
 
 5=on ennen
-6=on j\u00E4lkeen
+6=on jälkeen
     
 7=on suurempi kuin
 8=on pienempi kuin
 
-9=alkaa merkeill\u00E4
-10=p\u00E4\u00E4ttyy merkkeihin
+9=alkaa merkeillä
+10=päättyy merkkeihin
 
 11=kuulostaa
 12=LdapDwim
@@ -19,7 +19,8 @@
 13=on suurempi kuin
 14=on pienempi kuin
 
-15=NimenT\u00E4ydennys
+15=NimenTäydennys
 16=on osoitekirjassani
 17=ei ole osoitekirjassani
+18=ei ole tyhjä
 
