l10n for bug 483629 - add BCC to AllAddresses term in local search

--- a/pl/mail/chrome/messenger/search-attributes.properties
+++ b/pl/mail/chrome/messenger/search-attributes.properties
@@ -46,7 +46,7 @@
 40=zarezerwowane dla AB
 41=zarezerwowane dla AB
 42=zarezerwowane dla AB
-43=Od, Do lub Kopia
+43=Od, Do, Kopia lub Ukryta kopia
 44=Źródło statusu niechcianej poczty
 45=Prawdopodobieństwo niechcianej poczty
 46=Status załącznika
