--- a/nl/suite/installer/windows/override.properties
+++ b/nl/suite/installer/windows/override.properties
@@ -62,7 +62,7 @@ NextBtn=&Volgende >
 AcceptBtn=Ik &accepteer de voorwaarden in de licentieovereenkomst
 DontAcceptBtn=Ik a&ccepteer de voorwaarden in de licentieovereenkomst niet
 InstallBtn=&Installeren
-UninstallBtn=D&eïnstalleren
+UninstallBtn=D&e-installeren
 CancelBtn=Annuleren
 CloseBtn=&Sluiten
 BrowseBtn=&Bladeren…
