Bug 485251 - "On <date> <sender> wrote:"-string is not a correct sentence in swedish l10n.

--- a/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
+++ b/sv-SE/mail/chrome/messenger/messengercompose/composeMsgs.properties
@@ -320,7 +320,7 @@ sendMessageCheckSendButtonLabel=Skicka
 ## reply header in composeMsg
 ## <author> wrote:
 mailnews.reply_header_authorwrote=%s skrev
-mailnews.reply_header_ondate=Den %s
+mailnews.reply_header_ondate=%s
 
 ## reply header in composeMsg
 ## user specified 
