--- a/nl/mail/chrome/messenger/aboutRights.properties
+++ b/nl/mail/chrome/messenger/aboutRights.properties
@@ -2,4 +2,4 @@ aboutRightsTitle=Over uw rechten
 buttonLabel = Ken uw rechten…
 buttonAccessKey = K
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyRightsText = %S is gratis en open-source software van de Mozilla Foundation.
+notifyRightsText = %S is gratis en opensourcesoftware van de Mozilla Foundation.
