--- a/nb-NO/mail/chrome/messenger/prefs.properties
+++ b/nb-NO/mail/chrome/messenger/prefs.properties
@@ -38,7 +38,7 @@ customizedEmailText=Skriv inn ditt %1$S %2$S (for eksempel dersom din %1$S e-pos
 # account manager stuff
 prefPanel-server=Tjenerinnstillinger
 prefPanel-copies=Kopier og mapper
-prefPanel-syncing-and-diskspace=Synkronisering og diskplass
+prefPanel-synchronization=Synkronisering og lagring
 prefPanel-diskspace=Diskplass
 prefPanel-addressing=Adressering og utforming
 prefPanel-junk=Uønsket e-post
