Final part of bug 455246 - Change address book UI to refer to Contacts rather than Cards.

--- a/fr/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/fr/mail/chrome/messenger/addressbook/addressBook.properties
@@ -130,10 +130,16 @@ totalContactStatus=Nombre de contacts dans %1$S : %2$S
 noMatchFound=Pas d'occurrence trouvée
 matchFound=1 occurrence trouvée
 matchesFound=%S occurrences trouvées
-cardsCopied=%S fiches copiées
-cardCopied=1 fiche copiée
-cardsMoved=%S fiches déplacées
-cardMoved=Une fiche déplacée
+
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S contact copié;%1$S contacts copiés
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S contact déplacé;%1$S contacts déplacés
 
 # LDAP directory stuff
 invalidName=Veuillez entrer un nom valide
