Final part of bug 455246 - Change address book UI to refer to Contacts rather than Cards.

--- a/de/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/de/mail/chrome/messenger/addressbook/addressBook.properties
@@ -131,10 +131,15 @@ noMatchFound=Keinen Treffer gefunden
 matchFound=Ein Treffer gefunden
 matchesFound=%S Übereinstimmungen gefunden
 
-cardsCopied=%S Kontakte kopiert
-cardCopied=Ein Kontakt kopiert
-cardsMoved=%S Kontakte verschoben
-cardMoved=Ein Kontakt verschoben
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S Kontakt kopiert;%1$S Kontakte kopiert
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S Kontakt verschoben;%1$S Kontakte verschoben
 
 # LDAP directory stuff
 invalidName=Bitte geben Sie einen gültigen Namen ein.
