l10n for bug 455246 - change address book UI to refer to Contacts rather than Cards

--- a/pl/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/pl/mail/chrome/messenger/addressbook/addressBook.properties
@@ -106,10 +106,8 @@ noMatchFound    = Nie znaleziono adresów spełniających kryteria wyszukiwania
 matchesFound    = Liczba adresów spełniających kryteria wyszukiwania: %S
 matchFound      = Znaleziono jeden adres spełniający kryteria wyszukiwania
 
-cardCopied      = Skopiowano jedną wizytówkę
-cardsCopied     = Liczba skopiowanych wizytówek: %S
-cardsMoved      = Liczba przeniesionych wizytówek: %S
-cardMoved       = Przeniesiono jedną wizytówkę
+contactsCopied  = Skopiowano %1$S wizytówkę;Skopiowano %1$S wizytówki;Skopiowano %1$S wizytówek
+contactsMoved   = Przeniesiono %1$S wizytówkę;Przeniesiono %1$S wizytówki;Przeniesiono %1$S wizytówek
 
 # LDAP directory stuff
 invalidName                 = Proszę wprowadzić prawidłową nazwę.
