дещо пропущене, в цілому ацескі та стрічки

--- a/uk/mail/chrome/messenger/aboutRights.properties
+++ b/uk/mail/chrome/messenger/aboutRights.properties
@@ -3,5 +3,7 @@
 aboutRightsTitle=About Your Rights
 buttonLabel=Know your rights…
 buttonAccessKey=K
+
+# FIXME: localize
 # LOCALIZATION NOTE (notifyText): %S will be replaced by brandFullName from brand.properties
-notifyText=%S is free and open software from the non-profit Mozilla Foundation.
+notifyRightsText=%S is free and open source software from the non-profit Mozilla Foundation.
