--- a/uk/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/uk/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,16 +1,12 @@
 # Status strings used in the subscribe dialog
 
-subscribe-validating = Триває перевірка RSS-каналу…
 subscribe-cancelSubscription = Ви впевнені, що хочете скасувати підписку на цей RSS-канал?
 subscribe-cancelSubscriptionTitle = Триває подписка на RSS-канал…
-subscribe-noFeedSelected = <RSS-канал не вибраний>
 subscribe-feedAlreadySubscribed = Ви вже підписані на цей RSS-канал.
 subscribe-errorOpeningFile = Не можливо відкрити файл
 
 subscribe-OPMLImportTitle = Виберіть OPML-файл для імпорту
 subscribe-OPMLExportTitle = Експорт RSS-каналів в OPML-файл
-subscribe-OPMLExportFileTitle = Thunderbird\: експорт у формат OPML
-subscribe-OPMLExportFileName = MyThunderbirdFeeds.opml
 #LOCALIZATION NOTE: %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile = %S є некоректним OPML-файлом, або ж відбулася помилка під час його імпорту.
 
@@ -22,12 +18,25 @@ subscribe-OPMLExportOPMLFilesFilterText = OPML-файли
 # LOCALIZATION NOTE: Do not translate %d in the following line.
 # The first %S will receive the number of messages received so far;
 # the second %S will receive the total number of messages
-subscribe-fetchingFeedItems = Триває завантаження статей з RSS-каналу (%S з %S)
 
 newsblog-noNewArticlesForFeed = На цьому RSS-каналі не з’явилося оновлень.
 newsblog-networkError = %S не знайдений. Перевірте правильність написання імені та спробуйте знову.
-newsblog-invalidFeed = Формат RSS-канала %S неправильний.
-newsblog-getNewMailCheck = Триває перевірка наявності нових статей на RSS-каналі
 
 subscribe-confirmFeedDeletionTitle = Вилучити підписку на RSS-канал
 subscribe-confirmFeedDeletion = Ви впевнені, що хочете скасувати підписку на RSS-канал: \n  %S?
+
+# FIXME: localize
+newsblog-feedNotValidTitle=Invalid Feed
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S is not a valid feed.
+newsblog-feedNotValidTitle=Invalid Feed
+newsblog-getNewMsgsCheck=Checking feeds for new items…
+newsblog-networkErrorTitle=Network Error
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportDefaultFileName=My%SFeeds.opml
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileDialogTitle=%S OPML Export
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+subscribe-gettingFeedItems=Downloading feed articles (%S of %S)…
+subscribe-noFeedIsSelected=<no feed selected>
+subscribe-validating-feed=Verifying the feed…
