ще трохи, оминаючи великі куски

--- a/uk/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/uk/mail/chrome/messenger/addressbook/addressBook.properties
@@ -113,10 +113,6 @@ noMatchFound = Збігів не знайдено
 matchFound = Знайдений один збіг
 matchesFound = Знайдено збігів: %S
 
-cardsCopied = Скопійовано карток: %S
-cardCopied = Скопійована одна картка
-cardsMoved = Переміщено карток: %S
-cardMoved = Переміщена одна картка
 
 # LDAP directory stuff
 invalidName = Введіть коректне ім’я.
@@ -180,3 +176,9 @@ newContactTitleWithDisplayName=Нова картка для %S
 newContactTitleWithDisplayName=Нова картка для %S 
 ## LOCALIZATION NOTE (totalContactStatus):
 totalContactStatus=Всього карток у %1$S: %2$S
+
+# FIXME: localize
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+contactsCopied=%1$S contact copied;%1$S contacts copied
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+contactsMoved=%1$S contact moved;%1$S contacts moved
