L10n for bug 455246 - Change address book UI to refer to Contacts rather than Cards.

--- a/sv-SE/mail/chrome/messenger/messenger.properties
+++ b/sv-SE/mail/chrome/messenger/messenger.properties
@@ -65,8 +65,8 @@ LoadingMessageToPrint=Läser in meddelande för utskrift…
 MessageLoaded=Meddelandet är inläst…
 PrintingMessage=Skriver ut meddelandet…
 PrintPreviewMessage=Förhandsgranskar meddelande…
-PrintingCard=Skriver ut kort…
-PrintPreviewCard=Förhandsgranskar kort…
+PrintingContact=Skriver ut kontakt…
+PrintPreviewContact=Förhandsgranskar kontakt…
 PrintingAddrBook=Skriver ut adressbok…
 PrintPreviewAddrBook=Förhandsgranskar adressbok…
 PrintingComplete=Klar.
