--- a/nb-NO/mail/chrome/messenger/messenger.properties
+++ b/nb-NO/mail/chrome/messenger/messenger.properties
@@ -62,8 +62,8 @@ LoadingMessageToPrint=Laster melding for utskrift …
 MessageLoaded=Melding lastet …
 PrintingMessage=Skriver ut melding …
 PrintPreviewMessage=Forhåndsviser melding …
-PrintingContact=Skriver ut kort …
-PrintPreviewContact=Forhåndsviser kort …
+PrintingContact=Skriver ut kontakt …
+PrintPreviewContact=Forhåndsviser kontakt …
 PrintingAddrBook=Skriver ut adressebok …
 PrintPreviewAddrBook=Forhåndsviser adressebok …
 PrintingComplete=Fullført.
