--- a/nb-NO/mail/chrome/messenger/vcard.properties
+++ b/nb-NO/mail/chrome/messenger/vcard.properties
@@ -297,12 +297,12 @@
 # VCARD_ADDR_VIEW_COMPLETE_VCARD
 ## @name VCARD_ADDR_VIEW_COMPLETE_VCARD
 ## @loc None
-1051=Vis komplett kort
+1051=Vis komplett adressekort
 
 # VCARD_ADDR_VIEW_CONDENSED_VCARD
 ## @name VCARD_ADDR_VIEW_CONDENSED_VCARD
 ## @loc None
-1052=Vis kondensert kort
+1052=Vis kondensert adressekort
 
 # VCARD_ADDR_CONFINFO
 ## @name VCARD_ADDR_CONFINFO
