--- a/nb-NO/mail/chrome/messenger/subscribe.properties
+++ b/nb-NO/mail/chrome/messenger/subscribe.properties
@@ -37,8 +37,8 @@
 
 subscribeLabel-nntp=Velg nyhetsgruppene du vil være medlem av:
 subscribeLabel-imap=Velg mappene du vil være medlem av:
-currentListTab-nntp.label=Nåværende gruppeliste
-currentListTab-nntp.accesskey=v
+currentListTab-nntp.label=Gruppeliste
+currentListTab-nntp.accesskey=G
 currentListTab-imap.label=Mappeliste
 currentListTab-imap.accesskey=M
 pleaseWaitString=Vent …
