: changed mail/chrome/messenger-newsblog/am-newsblog.dtd : changed mail/chrome/messenger-newsblog/feed-subscriptions.dtd : changed mail/chrome/messenger-newsblog/newsblog.properties : changed mail/chrome/messenger/accountCreation.dtd : changed mail/chrome/messenger/accountCreation.properties : changed mail/chrome/messenger/accountCreationModel.properties : changed mail/chrome/messenger/accountCreationUtil.properties : changed mail/chrome/messenger/addressbook/addressBook.properties : changed mail/chrome/messenger/addressbook/pref-directory-add.dtd : changed mail/chrome/messenger/defaultClientDialog.dtd : changed mail/chrome/messenger/folderProps.dtd : changed mail/chrome/messenger/messenger.dtd : changed mail/chrome/messenger/messenger.properties : changed mail/chrome/messenger/messengercompose/messengercompose.dtd : changed mail/chrome/messenger/msgAccountCentral.dtd : changed mail/chrome/messenger/preferences/preferences.dtd : changed mail/chrome/messenger/preferences/security.dtd : changed mail/chrome/messenger/prefs.properties : changed mail/chrome/messenger/search-operators.properties : changed mail/chrome/overrides/settingsChange.dtd

--- a/he/mail/chrome/messenger-newsblog/newsblog.properties
+++ b/he/mail/chrome/messenger-newsblog/newsblog.properties
@@ -1,25 +1,40 @@
-subscribe-validating = מוודא הזנת נתונים RSS...
+subscribe-validating-feed = מוודא את ההזנה…
 subscribe-cancelSubscription = האם אתה בטוח שברצונך לבטל את ההרשמה שלך להזנת נתונים הנוכחית?
-subscribe-cancelSubscriptionTitle = נרשם כמנוי להזנת נתונים...
-subscribe-noFeedSelected = <לא נבחרה הזנת נתונים RSS>
-subscribe-feedAlreadySubscribed = אתה כבר מנוי להזנת נתונים זו.
+subscribe-cancelSubscriptionTitle = נרשם כמנוי להזנת נתונים…
+subscribe-noFeedIsSelected = <לא נבחרה הזנה>
+subscribe-feedAlreadySubscribed = אתה כבר מנוי להזנה זו.
 subscribe-errorOpeningFile = אין אפשרות לפתוח את הקובץ.
+
 subscribe-OPMLImportTitle = בחר קובץ OPML ליבוא
 subscribe-OPMLExportTitle = יצא הזנת נתונים כקובץ OPML
-subscribe-OPMLExportFileTitle = יצוא OPML של Thunderbird
-subscribe-OPMLExportFileName = MyThunderbirdFeeds.opml
+## LOCALIZATION NOTE(subscribe-OPMLExportFileDialogTitle): %S is the brandShortName
+subscribe-OPMLExportFileTitle = יצוא OPML של %S
+## LOCALIZATION NOTE(subscribe-OPMLExportDefaultFileName): %S is the brandShortName
+subscribe-OPMLExportFileName = My%SFeeds.opml
+## LOCALIZATION NOTE(subscribe-errorInvalidOPMLFile): %S is the name of the OPML file the user tried to import.
 subscribe-errorInvalidOPMLFile = או ש־%S הוא לא קובץ OPML חוקי או שחלה שגיאה ביבוא הקובץ. 
+
 subscribe-OPMLExportOPMLFilesFilterText = קבצי OPML
 
-#LOCALIZATION NOTE: %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletionTitle=הסרת הזנה
+## LOCALIZATION NOTE(subscribe-confirmFeedDeletion): %S is the name of the feed the user wants to unsubscribe from.
 subscribe-confirmFeedDeletion=האם אתה בטוח שבצונך להסיר הרשמה מההזנה: \n %S?
 
 ###subsribe-confirmFeedDeletionTitle = הסר הזנת נתונים
 ###subsribe-confirmFeedDeletion = האם אתה בטוח שברצונך לבטל את ההרשמה שלך להזנת נתונים: \n %S?
 
-subscribe-fetchingFeedItems = מוריד מאמרי הזנת נתונים (%S מתוך %S)
-newsblog-noNewArticlesForFeed = אין מאמרים חדשים עבור הזנת נתונים זו.
-newsblog-networkError = לא ניתן למצוא את %S. אנא בדוק את השם ונסה שוב.
-newsblog-invalidFeed = %S איננה הזנת RSS חוקית
-newsblog-getNewMailCheck = לפריטים חדשים RSS בודק הזנת
+## LOCALIZATION NOTE(subscribe-gettingFeedItems):
+##  - The first %S is the number of articles processed so far;
+##  - The second %S is the total number of items
+subscribe-gettingFeedItems=מוריד מאמרים מהזנה (%S מתוך %S)…
+
+newsblog-noNewArticlesForFeed=אין מאמרים חדשים עבור הזנת נתונים זו.
+
+newsblog-networkErrorTitle=שגיאת רשת
+## LOCALIZATION NOTE(newsblog-networkError): %S is the feed URL
+newsblog-networkError=לא ניתן למצוא את %S. אנא בדוק את השם ונסה שוב.
+
+newsblog-feedNotValidTitle=הזנה לא תקינה
+## LOCALIZATION NOTE(newsblog-feedNotValid): %S is the feed URL
+newsblog-feedNotValid=%S אינה הזנה תקינה.
+newsblog-getNewMsgsCheck=בודק הזנה לפריטים חדשים…
