--- a/he/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/he/mail/chrome/messenger/addressbook/addressBook.properties
@@ -105,10 +105,22 @@ totalContactStatus=סך הכל %2$S אנשי קשר בספר הכתובות %1$S
 noMatchFound = לא נמצאו התאמות
 matchFound = נמצאה התאמה אחת
 matchesFound = נמצאו %S התאמות
-cardsCopied = הועתקו %S כרטיסים
-cardCopied = הועתק כרטיס אחד
-cardsMoved = %S כרטיסים הועברו
-cardMoved = הועבר כרטיס אחד
+
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=איש קשר אחד הועתק;%1$S אנשי קשר הועתקו
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=איש קשר אחד הועבר;%1$S אנשי קשר הועברו
+
+
+### cardsCopied = הועתקו %S כרטיסים
+### cardCopied = הועתק כרטיס אחד
+### cardsMoved = %S כרטיסים הועברו
+### cardMoved = הועבר כרטיס אחד
 
 invalidName = אנא הכנס שם חוקי.
 invalidHostname = אנא הכנס שם שרת מארח חוקי.
