verb usage (voi vs saa), TB string changes

--- a/fi/mail/chrome/messenger/addressbook/addressBook.properties
+++ b/fi/mail/chrome/messenger/addressbook/addressBook.properties
@@ -130,10 +130,15 @@ noMatchFound=Ei yhtään osumaa
 matchFound=1 osuma löytyi
 matchesFound=%S osumaa löytyi
 
-cardsCopied=%S korttia kopioitiin
-cardCopied=1 kortti kopioitiin
-cardsMoved=%S korttia siirrettiin
-cardMoved=1 kortti siirrettiin
+## LOCALIZATION NOTE (contactsCopied): Semi-colon list of plural forms
+## %1$S is the number of contacts that were copied. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsCopied=%1$S yhteystieto kopioitiin;%1$S yhteystietoa kopioitiin
+
+## LOCALIZATION NOTE (contactsMoved): Semi-colon list of plural forms
+## %1$S is the number of contacts that were moved. This should be used multiple
+## times wherever you need it. Do not replace by %S.
+contactsMoved=%1$S yhteystieto siirrettiin;%1$S yhteystietoa siirrettiin
 
 # LDAP directory stuff
 invalidName=Kirjoita kelvollinen nimi.
