--- a/fi/mail/chrome/messenger/messenger.properties
+++ b/fi/mail/chrome/messenger/messenger.properties
@@ -62,8 +62,8 @@ LoadingMessageToPrint=Ladataan viestiä tulostettavaksi…
 MessageLoaded=Viesti ladattu…
 PrintingMessage=Tulostetaan viestiä…
 PrintPreviewMessage=Esikatsellaan viestiä…
-PrintingCard=Tulostetaan osoitekorttia…
-PrintPreviewCard=Osoitekortin tulostuksen esikatselu…
+PrintingContact=Tulostetaan yhteystietoa…
+PrintPreviewContact=Yhteystiedon tulostuksen esikatselu…
 PrintingAddrBook=Tulostetaan osoitekirjaa…
 PrintPreviewAddrBook=Osoitekirjan tulostuksen esikatselu…
 PrintingComplete=Valmis.
