--- a/fi/mail/chrome/messenger/prefs.properties
+++ b/fi/mail/chrome/messenger/prefs.properties
@@ -38,7 +38,7 @@ customizedEmailText=Kirjoita palvelimesi ja tunnuksesi %1$S %2$S (esimerkiksi jo
 # account manager stuff
 prefPanel-server=Palvelimen asetukset
 prefPanel-copies=Kopiot ja kansiot
-prefPanel-syncing-and-diskspace=Yhteydetön tila ja levytilan käyttö
+prefPanel-synchronization=Synkronointi ja levytilan käyttö
 prefPanel-diskspace=Levytilan käyttö
 prefPanel-addressing=Kirjoittaminen ja osoitteet
 prefPanel-junk=Roskapostiasetukset
