--- a/fi/mail/chrome/messenger/search-attributes.properties
+++ b/fi/mail/chrome/messenger/search-attributes.properties
@@ -47,7 +47,7 @@
 40=reserved for AB
 41=reserved for AB
 42=reserved for AB
-43=Lähettäjä, vastaanottaja tai kopio-osoite
+43=Lähettäjä, vastaanottaja ja kopio tai piilokopio-osoite
 44=Roskapostiluku alkuperäinen
 45=Roskapostiprosentti
 46=Liitteen tila
