--- a/pl/browser/chrome/browser/browser.properties
+++ b/pl/browser/chrome/browser/browser.properties
@@ -188,7 +188,7 @@ safebrowsing.notAnAttackButton.accessKey=T
 # LOCALIZATION NOTE (privateBrowsingYesTitle, privateBrowsingNoTitle, privateBrowsingNeverAsk):
 # Access keys are specified by prefixing the desired letter with an ampersand.
 privateBrowsingDialogTitle=Tryb prywatny
-privateBrowsingMessageHeader=Czy chcesz zacząć przeglądanie w trybie prywatnym?
+privateBrowsingMessageHeader=Czy rozpocząć przeglądanie w trybie prywatnym?
 privateBrowsingMessage=%S zapamięta aktualnie otwarte karty, aby otworzyć je po zakończeniu przeglądania w trybie prywatnym.
 privateBrowsingYesTitle=&Przejdź do trybu prywatnego
 privateBrowsingNoTitle=&Anuluj
