--- a/he/calendar/installer/custom.properties
+++ b/he/calendar/installer/custom.properties
@@ -19,7 +19,8 @@
 #
 # Contributor(s):
 #  Robert Strong <robert.bugzilla@gmail.com>
-#  Tomer Cohen <tomerc@gmail.com> (Hebrew translation)
+#   Tomer Cohen <tomerc@gmail.com>
+#   
 #   
 #
 # Alternatively, the contents of this file may be used under the terms of
@@ -35,44 +36,79 @@
 # the terms of any one of the MPL, the GPL or the LGPL.
 #
 # ***** END LICENSE BLOCK *****
-OPTIONAL_COMPONENTS_TITLE = בחר רכיבים אופציונליים
-OPTIONAL_COMPONENTS_SUBTITLE = בחר אלו רכיבים אופציונליים של $BrandFullNameDA ברצונך להתקין.
-OPTIONAL_COMPONENTS_LABEL = רכיבים אופציונליים:
-DOMI_TITLE = Dom Inspector
-DOMI_TEXT = מפקח על המבנה והמאפיינים של חלון והתוכן שלו.
 
-QFA_TITLE= סוכן משוב איכות
-QFA_TEXT= שולח מידע אודות קריסות התוכנה ל־Mozilla.
-APP_DESC=קבצים נדרשים עבור היישום ${BrandShortName}
+# LOCALIZATION NOTE:
 
-OPTIONS= &אפשרויות $(^NameDA)
+# This file must be saved as UTF8
+
+# Accesskeys are defined by prefixing the letter that is to be used for the
+# accesskey with an ampersand (e.g. &).
+
+# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
+# custom string and always use the same one as used by the en-US files.
+# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
+# for double ampersand) and prevents the letter following the ampersand from
+# being used as an accesskey.
+
+# You can use \n to create a newline in the string but only when the string
+# from en-US contains a \n.
+REG_APP_DESC = $BrandShortName היא תוכנת דוא"ל עשירה. &{BrandShortName} תומכת בפרוטוקולי דואר IMAP ו־POP, כמו־גם בדואר HTML. פקדי דואר זבל מובנים, יכולות RSS, חיפוש מהיר רב עוצמה, בודק איות תוך כדי הקלדה, תיבת דואר נכנס גלובלית, ואפשרויות סינון מתקדמות נכללות באוסף התכונות המודרניות של  &{BrandShortName} 
+
+CONTEXT_OPTIONS=&אפשרויות $BrandShortName
+CONTEXT_SAFE_MODE= הפעלת $BrandShortName במצב &בטוח
+
 SAFE_MODE = מצב בטוח
 OPTIONS_PAGE_TITLE = סוג התקנה
 OPTIONS_PAGE_SUBTITLE = בחר אפשרויות התקנה
+OPTIONS_MAKE_DEFAULT=&השתמש ב־$BrandShortName כתוכנת דואר ברירת מחדל
+
 SHORTCUTS_PAGE_TITLE = צור קיצורי דרך
 SHORTCUTS_PAGE_SUBTITLE = צור סמלים לתוכנה
-SURVEY_TEXT = &ספר לנו מה אתה חושב על $BrandShortName
+SURVEY_TEXT = &ספר לנו מה חשבת על $BrandShortName
 LAUNCH_TEXT = &הפעל את $BrandFullName כעת
-WARN_APP_RUNNING_INSTALL = $BrandFullName חייב להיסגר כדי להמשיך בהתקנה.\n\nלחץ "אישור" ליציאה מ־$BrandFullName והמשך בהתקנה.
-CREATE_ICONS_DESC = צור סמלים עבור $BrandShortName:
 
+CREATE_ICONS_DESC = צור סמלים עבור $BrandShortName:
+ICONS_DESKTOP = על &שולחן העבודה
+ICONS_STARTMENU = ב&תפריט ההתחלה
 ICONS_QUICKLAUNCH = ב&סרגל כלים הפעלה מהירה
-WARN_WRITE_ACCESS = אין ברשותך הרשאות כתיבה לתיקיית ההתקנה. \n\nלחץ על אישור כדי לבחור בתיקייה אחרת.
+WARN_WRITE_ACCESS = אין לך הרשאות כתיבה לתיקיית ההתקנה. \n\nלחץ על אישור כדי לבחור בתיקייה אחרת.
 WARN_DISK_SPACE = אין לך מספיק מקום פנוי כדי להתקין למיקום זה. \n\nלחץ על אישור כדי לבחור במיקום אחר.
 
-STATUS_INSTALL_APP = מתקין את $BrandShortName...
-STATUS_INSTALL_LANG = מתקין קבצי שפה (${AB_CD}}...
-STATUS_INSTALL_OPTIONAL = מתקין רכיבים אופציונליים...
-STATUS_UNINSTALL_MAIN = מסיר את $BrandShortName...
-STATUS_CLEANUP = ניקוי כללי...
+BANNER_CHECK_EXISTING=בודק התקנה קיימת…
+
+STATUS_INSTALL_APP = מתקין את $BrandShortName…
+STATUS_INSTALL_LANG = מתקין קבצי שפה (${AB_CD})…
+
+STATUS_UNINSTALL_MAIN = מסיר את $BrandShortName…
+STATUS_CLEANUP = מנקה את הקן…
 OPTIONS_SUMMARY = בחר את סוג ההתקנה המועדפת, ואז לחץ על הבא.
 OPTION_STANDARD_DESC = $BrandShortName יותקן עם האפשרויות הנפוצות ביותר.
 OPTION_STANDARD_RADIO = &רגילה
-OPTION_COMPLETE_DESC = $BrandShortName יותקן עם כל האפשרויות הזמינות.
-OPTION_COMPLETE_RADIO = &מלאה
+
 OPTION_CUSTOM_DESC = באפשרותך לבחור אפשרויות בודדות שיותקנו. מומלץ למשתמשים מנוסים.
 OPTION_CUSTOM_RADIO = מותאמת &אישית
 
-ICONS_DESKTOP=על &שולחן העבודה
-ICONS_STARTMENU=בתיקיית התוכנות ב&תפריט ההתחל
-WARN_APP_RUNNING_UNINSTALL=$(^Name) חייב להיסגר כדי להמשיך בהסרה.\nלחץ "אישור" ליציאה אוטומטית מ־$(^Name) והמשך ההסרה.
+ERROR_CREATE_DIRECTORY_PREFIX=שגיאה ביצירת תיקייה:
+ERROR_CREATE_DIRECTORY_SUFFIX=בחר 'ביטול' כדי להפסיק את ההתקנה\nאו 'נסה שוב' בכדי לנסות שוב.
+
+SUMMARY_CLICK=בחר 'התקן' כדי להמשיך.
+SUMMARY_INSTALLED_TO=$BrandShortName יותקן במיקום הבא:
+SUMMARY_PAGE_SUBTITLE=מוכן להתחיל בהתקנה של $BrandShortName
+SUMMARY_PAGE_TITLE=סיכום
+SUMMARY_REBOOT_REQUIRED_INSTALL=ייתכן ותידרש הפעלה מחדש של המחשב להשלמת ההתקנה.
+SUMMARY_REBOOT_REQUIRED_UNINSTALL=ייתכן ותידרש הפעלה מחדש של המחשב להשלמת ההסרה.
+SUMMARY_MAKE_DEFAULT=$BrandShortName תוגדרה כתוכנת דואר ברירת המחדל שלך.
+
+UN_CONFIRM_PAGE_TITLE=הסרת $BrandFullName
+UN_CONFIRM_PAGE_SUBTITLE=הסר את $BrandFullName מהמחשב שלך.
+UN_CONFIRM_UNINSTALLED_FROM=$BrandShortName יוסר מהמיקום הנוכחי:
+UN_CONFIRM_CLICK=לחץ 'הסרה' כדי להמשיך.
+
+WARN_MANUALLY_CLOSE_APP_INSTALL=$BrandShortName חייב להיסגר כדי להמשיך בהתקנה.\n\nבבקשה סגור את $BrandShortName כדי להמשיך.
+WARN_MANUALLY_CLOSE_APP_UNINSTALL=$BrandFullName חייב להיסגר כדי להמשיך בהסרה.\n\nבבקשה סגור את $BrandShortName כדי להמשיך.
+WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName כבר רצה.\n\nבבקשה סגור את $BrandShortName לפני הפעלת הגירסה שהתקנת כעת.
+
+WARN_MIN_SUPPORTED_OS_MSG=מצטער, $BrandShortName לא ניתן להתקנה. גירסה זו של $BrandShortName דורשת ${MinSupportedVer} ומעלה.
+
+WARN_RESTART_REQUIRED_UNINSTALL=יש להפעיל את המחשב מחדש כדי להשלים הסרה קודמת של $BrandShortName. האם ברצונך להפעיל מחדש כעת?
+WARN_RESTART_REQUIRED_UPGRADE=יש להפעיל את המחשב מחדש כדי להשלים שידרוג גירסה קודמת של $BrandShortName. האם להפעיל מחדש כעת?
